css/style.css
/* ... */
@media (max-width: 768px) {



    a.list-group-item {

        margin-left: 10px;
        margin-right: 30px;
        margin-top: 3rem;
        margin-bottom: 3rem;
        overflow: hidden;
    }

    .thumbContainer {
        max-height: 250px !important;
        overflow-y: hidden;
    }

    i.play-float-icon {

        font-size: 10rem;
        /*  transform: translateY(-45%);*/
        top: 155px;


    }

}

/* No greater than 900px, no less than 455px */
@media ((max-width: 768px) and (min-width: 455px)) {

    #designOptions {
        margin-top: 5%;
    }




}

/*end 768 -455*/
/*max-width 768*/
@media (max-width: 455px) {

    body[data-design="option-2"]::before {
        left: -75px;
    }

}

.teaserImg {
    max-height: 160px;
    overflow: hidden;
    -webkit-filter: grayscale(100%);
    /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.imgFrame {
    text-align: left;
}

.imgIcon .fas {
    position: absolute;
    z-index: 9;
    font-size: 5rem;
    opacity: 1;
    display: block;
    color: #fff;
    margin-left: 40%;
    margin-top: 13%;
}

